Replies to the task (file fild added)

--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -11,31 +11,80 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "a = models.TechnicalTask.objects.values('theme', 'id')"
+    "a =  models.Replies.objects.filter(technical_task__id=1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<QuerySet [{'theme': 'first', 'id': 1}, {'theme': 'adssadas', 'id': 2}, {'theme': 'sadas', 'id': 3}]>"
+       "<TreeQuerySet [<Replies: Replies object (3)>, <Replies: Replies object (4)>, <Replies: Replies object (6)>, <Replies: Replies object (7)>, <Replies: Replies object (9)>, <Replies: Replies object (10)>, <Replies: Replies object (11)>, <Replies: Replies object (12)>, <Replies: Replies object (13)>, <Replies: Replies object (14)>, <Replies: Replies object (15)>, <Replies: Replies object (16)>, <Replies: Replies object (17)>, <Replies: Replies object (18)>, <Replies: Replies object (19)>, <Replies: Replies object (20)>, <Replies: Replies object (24)>]>"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'sdfghjkl;'"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a[0].message"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "b=models.TechnicalTask.objects.get(id=6)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<TechnicalTask: Task: First>"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "b"
    ]
   },
   {
@@ -51,18 +100,6 @@
    "display_name": "Django Shell-Plus",
    "language": "python",
    "name": "django_extensions"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.6.6"
   }
  },
  "nbformat": 4,
